--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
   justify-content: center;
 }
 
+/* LAYOUT */
 main {
   position: relative;
   width: 100rem;
@@ -44,6 +45,7 @@ main {
   transition: all 0.75s;
 }
 
+/* ELEMENTS */
 .name {
   position: relative;
   font-size: 4rem;
@@ -64,11 +66,9 @@ main {
 .player--active {
   background-color: rgba(255, 255, 255, 0.4);
 }
-
 .player--active .name {
   font-weight: 700;
 }
-
 .player--active .score {
   font-weight: 400;
 }
@@ -99,6 +99,7 @@ main {
   font-size: 3.5rem;
 }
 
+/* ABSOLUTE POSITIONED ELEMENTS */
 .btn {
   position: absolute;
   left: 50%;
@@ -131,11 +132,9 @@ main {
 .btn--new {
   top: 4rem;
 }
-
 .btn--roll {
   top: 39.3rem;
 }
-
 .btn--hold {
   top: 46.1rem;
 }
@@ -165,4 +164,8 @@ main {
 .player--winner .name {
   font-weight: 700;
   color: #c7365f;
+}
+
+.hidden {
+  display: none;
 }
